Stream BlockItems prior to requesting signature for BlockProof immed
Signed-off-by: Derek Riley <derek.riley@swirldslabs.com>